# genai-test-automation

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: automation.yml
agents/: planner_agent.py  planner_agent_logic.py  ui_agent.py
core/: crew.py  tasks.py
llm/: gemini_client.py  ollama_llm.py
tests/api/: test_user_api.py
tests/ui/: test_login_ui.py
tools/: old_playwright_tool.py  playwright_tool.py
