[project]
name = "genai-test-automation"
version = "0.1.0"
description = "GenAI-powered UI & API test automation framework"
readme = "README.md"
requires-python = "~3.11"

authors = [
  { name = "Sudershan Singh", email = "sudershan.singh@bounteous.com" }
]

dependencies = [
    "pytest>=9.0.2,<10.0.0",
    "playwright>=1.57.0,<2.0.0",
    "httpx>=0.28.1,<0.29.0",
    "allure-pytest>=2.15.2,<3.0.0",
    "crewai (>=1.7.2,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "litellm (<1.80)",
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
]
